fix spacing, change p tag font

--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -15,16 +15,17 @@ h3,
 h4,
 h5,
 h6 {
-  margin: 0 0 35px;
+  /*margin: 0 0 35px;*/
   text-transform: uppercase;
   font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 700;
   letter-spacing: 1px;
 }
 p {
-  margin: 0 0 25px;
+  margin: 0 0 35px;
   font-size: 18px;
   line-height: 1.5;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 @media (min-width: 768px) {
   p {
@@ -213,34 +214,33 @@ a:focus {
   }
 }
 .content-section {
-  /*padding-top: 80px;*/
+  width: 100%;
+  padding-bottom: 50px 0;
+  color: white;
+  background-color: black;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+  -o-background-size: cover;
 }
 .projects-section {
   width: 100%;
-  /*padding: 50px 0;*/
+  padding: 50px 0;
   color: white;
-  /*background: url(../img/downloads-bg.jpg) no-repeat center center scroll;*/
   background-color: grey;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
   -o-background-size: cover;
 }
-#map {
-  width: 100%;
-  height: 200px;
-  margin-top: 100px;
-}
+
+
 @media (min-width: 767px) {
   .content-section {
-    padding-top: 70px;
+    padding-top: 50px;
   }
   .projects-section {
-    padding-top: 40px;
-  }
-  #map {
-    height: 400px;
-    margin-top: 250px;
+    padding-top: 50px;
   }
 }
 .btn {
@@ -368,8 +368,8 @@ body {
 
 
 .single-item {
-  width: 65%;
-  height: 65%;
+  width: 70%;
+  height: 50%;
 }
 
 .single-item img {
